--- a/src/content/blog/2025-04-14.md
+++ b/src/content/blog/2025-04-14.md
@@ -1,8 +1,8 @@
 ---
-title: '2025.04.14'
-description: '2025第一篇碎碎念'
-pubDate: 'April 14 2025'
-heroImage: '/blog-placeholder-3.jpg'
+title: 2025.04.14
+description: 2025第一篇碎碎念
+pubDate: 2025-04-14
+heroImage: /blog-placeholder-about.jpg
 ---
 
 把之前写的一些东西给隐藏了。 因为“没有价值”。
