change the style of the Home and blog page

--- a/src/content/blog/2025-04-14.md
+++ b/src/content/blog/2025-04-14.md
@@ -1,8 +1,8 @@
 ---
-title: 2025.04.14
+title: 博客重启
 description: 2025第一篇碎碎念
 pubDate: 2025-04-14
-heroImage: /blog-placeholder-about.jpg
+category: "Thoughts"
 ---
 
 把之前写的一些东西给隐藏了。 因为“没有价值”。
